criando uma Prop

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <card-news></card-news>
     <card-news></card-news>
     <card-news></card-news>
-    <titulo-dinamico></titulo-dinamico>
+    <titulo-dinamico titulo="noticia urgente"></titulo-dinamico>
+    <titulo-dinamico titulo="noticia urgente - 2"></titulo-dinamico>
 </body>
 </html>
