construindo as props do card news

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             </div>
         </div>
     </div>
-    <card-news></card-news>
+    <card-news 
+        autor="Iago"
+        title="Darth Vader Contra Devs"
+        content="Darth Vader procura desenvolvedores que saibam trabalhar com componentes."
+        >
+    </card-news>
 </body>
 </html>
