pegando as props dos sub elementos do component

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <card-news 
         autor="Iago"
         title="Darth Vader Contra Devs"
+        link-url="www.google.com"
+        photo="./assets/darth-vader.jpg"
         content="Darth Vader procura desenvolvedores que saibam trabalhar com componentes."
         >
     </card-news>
