--- a/index.html
+++ b/index.html
@@ -9,25 +9,21 @@
     <script src="./src/components/TituloDinamico.js" defer></script>
 </head>
 <body>
-    <div class="container">  
-        <div class="card">
-            <div class="card__left">
-                <span>By Iago Oliveira</span>
-                <a href="#">Darth Vader Contra Devs</a>
-                <p>Darth Vader procura desenvolvedores que saibam trabalhar com componentes.</p>
-            </div>
-            <div class="card__right">
-                <img src="./assets/darth-vader.jpg" alt="darth vader">
-            </div>
-        </div>
-    </div>
-    <card-news 
-        autor="Iago"
-        title="Darth Vader Contra Devs"
-        link-url="www.google.com"
-        photo="./assets/darth-vader.jpg"
-        content="Darth Vader procura desenvolvedores que saibam trabalhar com componentes."
+    <div class="app-root">  
+        <card-news 
+            autor="Iago"
+            title="Darth Vader Contra Devs"
+            link-url="www.google.com"
+            photo="./assets/darth-vader.jpg"
+            content="Darth Vader procura desenvolvedores que saibam trabalhar com componentes."
         >
-    </card-news>
+        </card-news>
+    
+        <card-news 
+            title="Yoda convence republcia a utlizar components"
+            link-url="www.google.com"
+            content="Yoda se pronuncia e choca a republica."
+        >
+        </card-news>
 </body>
 </html>
